# fast-traffic-simulator

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  fts.py  legacy.py  pyproject.toml  sensitivity_analysis_framework.py  test-uncertainty.py  test.py  ts.py
.github/workflows/: publish.yml
examples/: basic.py  demo.py  explore.py  quickstart.py  sensitivity.py  simulate.py  visualize.py
examples/demo_data/: demo_demand.csv  demo_graph.csv
examples/sensitivity/: basic_2.py  explore.py  sensitivity.py  sensitivity_small.py
fts/: __init__.py  simulator.py  visualization.py
