[project]
name = "fast-traffic-simulator"
version = "0.1.1"
description = "A NumPy/SciPy-based microscopic traffic simulator"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [
    { name = "Marco Pistore" },
]
keywords = ["traffic", "simulation", "transport", "scipy", "numpy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "pyarrow>=14.0",
]

[project.urls]
Homepage = "https://github.com/fbk-most/fast-traffic-simulator"
Repository = "https://github.com/fbk-most/fast-traffic-simulator"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "fts/",
    "examples/",
    "LICENSE",
    "README.md",
    "TODO.md",
    "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["fts"]

[dependency-groups]
dev = [
    "pandas-stubs",
    "scipy-stubs",
    "mypy",
]
